--- a/esphome/d1_mini_distance_temp.yaml
+++ b/esphome/d1_mini_distance_temp.yaml
@@ -4,7 +4,7 @@ esphome:
   board: d1_mini
 
 wifi:
-  ssid: !secret wifi_ssid
+  ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
 
@@ -25,6 +25,7 @@ ota:
 
 dallas:
   - pin: D5
+    update_interval: 300s
   
 sensor:
   - platform: dallas
@@ -32,6 +33,7 @@ sensor:
     name: "Sourdough Temperature"
 
   - platform: ultrasonic
+    update_interval: 300s
     trigger_pin: D1
     echo_pin: D2
     filters:
