--- a/esphome/esp32_ble_relay.yaml
+++ b/esphome/esp32_ble_relay.yaml
@@ -4,7 +4,7 @@ esphome:
   board: esp-wrover-kit
 
 wifi:
-  ssid: !secret wifi_ssid
+  ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
   
