--- a/esphome/sensor_esp01_dht22_bed1.yaml
+++ b/esphome/sensor_esp01_dht22_bed1.yaml
@@ -4,7 +4,7 @@ esphome:
   board: esp01_1m
 
 wifi:
-  ssid: !secret wifi_ssid
+  ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
 
@@ -22,16 +22,10 @@ sensor:
     model: DHT22
     update_interval: 300s
     temperature:
-      name: "White Temperature"
+      name: "Dining Room Temperature"
     humidity:
-      name: "White Humidity"
+      name: "Dining Room Humidity"
   - platform: adc
     pin: VCC
     name: "White Voltage"
     update_interval: 300s
-
-#binary_sensor:
-#  - platform: gpio
-#    pin: GPIO0
-#    name: "Kitchen Motion Sensor"
-#    device_class: motion
