--- a/esphome/d1mini_motion_seb.yaml
+++ b/esphome/d1mini_motion_seb.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: d1mini_temp_pir
+  name: d1mini_motion_seb
   platform: ESP8266
   board: d1_mini
 
@@ -11,7 +11,7 @@ wifi:
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "D1Mini Temp Pir Fallback Hotspot"
+    ssid: "D1Mini Temp Pir Hotspot"
     password: !secret wifi_password
 
 captive_portal:
@@ -31,11 +31,11 @@ dallas:
 sensor:
   - platform: dallas
     address: 0x760119500218FF28
-    name: "Temperature"
+    name: "Seb D1 Temperature"
 
 
 binary_sensor:
   - platform: gpio
     pin: D1
-    name: "Motion Sensor"
+    name: "Seb D1 Motion"
     device_class: motion
